--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,9 +1,9 @@
-- title: Email
-  url: mailto:zivong@protonmail.com
+- title: Portfolio
+  url: https://mohammadkhan-3.github.io/resume/
   icon: fas fa-envelope
 - title: Twitter
   url: https://twitter.com/zivong91
   icon: fab fa-twitter
 - title: GitHub
-  url: https://github.com/zivong
+  url: https://github.com/MohammadKhan-3
   icon: fab fa-github
