--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,5 @@
 - title: Home
-  url: /
+  url: /home/
 - title: About
   url: /about/
 - title: Short Stories
@@ -8,7 +8,7 @@
   url: /screenplays/
 - title: Memoir
   url: /memoir/
-- title: Download
+- title: Download Jekyll Theme
   url: https://github.com/zivong/jekyll-theme-hydure/archive/refs/heads/master.zip
 - title: GitHub
   url: https://github.com/zivong/jekyll-theme-hydure
