edited first post

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,5 +10,5 @@
   url: /memoir/
 - title: Download Jekyll Theme
   url: https://github.com/zivong/jekyll-theme-hydure/archive/refs/heads/master.zip
-- title: GitHub
-  url: https://github.com/zivong/jekyll-theme-hydure
+#- title: GitHub
+#  url: https://github.com/zivong/jekyll-theme-hydure
