still figuring out posts

--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: MoStories
-tagline: Grab a cup of Joe and read some MoStories
+title: MoStories 
+tagline: Grab a cup of Joe and read some Mo 
 
 author: 
   name: Mohammad Khan
   url: https://mohammadkhan-3.github.io/resume/
-  
+
 # title: Hydure
 # tagline: A concise two-column blog theme for Jekyll
 
