--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@
   url: /screenplays/
 - title: Memoir
   url: /memoir/
-- title: Download Jekyll Theme
-  url: https://github.com/zivong/jekyll-theme-hydure/archive/refs/heads/master.zip
+# - title: Download Jekyll Theme
+#   url: https://github.com/zivong/jekyll-theme-hydure/archive/refs/heads/master.zip
 #- title: GitHub
 #  url: https://github.com/zivong/jekyll-theme-hydure
