--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,8 @@
 #   url: /home/
 - title: About
   url: /about/
+- title: Subscribe for Weekly Stories
+  url: /subscribe/
 - title: Short Stories
   url: /shortstory/
 - title: Screenplays
