added Mailchimp link

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,8 @@
 - title: About
   url: /about/
 - title: Subscribe for Weekly Stories
-  url: /subscribe/
+  url: http://eepurl.com/hziK8P
+  # /subscribe/
 - title: Short Stories
   url: /shortstory/
 - title: Screenplays
