--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,11 +5,11 @@
 - title: Online Porfolio
   url: https://mohammadkhan-3.github.io/resume/
 - title: Short Stories
-  url: /shortstory/
+  url: https://mohammadkhan-3.github.io/MoStories/tags/#short-story
 - title: Screenplays
-  url: /screenplays/
+  url: https://mohammadkhan-3.github.io/MoStories/tags/#screenplay
 - title: Memoir
-  url: /memoir/
+  url: https://mohammadkhan-3.github.io/MoStories/tags/#memoir
 - title: Subscribe for Weekly Stories
   url: http://eepurl.com/hziK8P
   # /subscribe/
