--- a/_data/social.yml
+++ b/_data/social.yml
@@ -7,3 +7,6 @@
 - title: GitHub
   url: https://github.com/MohammadKhan-3
   icon: fab fa-github
+- title: Medium
+  url: https://mohammadkhan135.medium.com/
+  icon: fab fa-medium
