Embedded PDFs & added background image

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@
   url: https://mohammadkhan-3.github.io/MoStories/tags/#short-story
 - title: Screenplays
   url: https://mohammadkhan-3.github.io/MoStories/tags/#screenplay
-- title: Memoir
+- title: Memoirs
   url: https://mohammadkhan-3.github.io/MoStories/tags/#memoir
 - title: Subscribe for Weekly Stories
   url: http://eepurl.com/hziK8P
