added portfolio link

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@
 - title: About
   url: /about/
 - title: Online Porfolio
-  url: https://mohammadkhan-3.github.io/resume/
+  url: https://mohammadkhan-3.github.io/resume/stories.html
 - title: Short Stories
   url: https://mohammadkhan-3.github.io/MoStories/tags/#short-story
 - title: Screenplays
