added wordpress site

--- a/_data/social.yml
+++ b/_data/social.yml
@@ -10,3 +10,6 @@
 - title: Medium
   url: https://mohammadkhan135.medium.com/
   icon: fab fa-medium
+- title: Wordpress
+  url: https://mostories261398878.wordpress.com/
+  icon: fab fa-wordpress
