again fixing portfolio icon in navigation bar

--- a/_data/social.yml
+++ b/_data/social.yml
@@ -12,4 +12,4 @@
   icon: fab fa-wordpress
 - title: Portoflio
   url: https://mohammadkhan-3.github.io/resume/
-  icon: fab fa-mohammadkhan-3.github.io
+  icon: fab fa-mohammadkhan-3
