fixing portfolio icon

--- a/_data/social.yml
+++ b/_data/social.yml
@@ -11,5 +11,5 @@
   url: https://mostories261398878.wordpress.com/
   icon: fab fa-wordpress
 - title: Portoflio
-  url: https://mohammadkhan-3.github.io/resume/
-  icon: fab fa-mohammadkhan-3
+  url: https://mohammadkhan-3.github.io/resume/stories.html
+  icon: fab fa-github.io
