--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,8 +10,8 @@
   url: https://mohammadkhan-3.github.io/MoStories/tags/#screenplay
 - title: Memoirs
   url: https://mohammadkhan-3.github.io/MoStories/tags/#memoir
-- title: Subscribe for Weekly Stories
-  url: http://eepurl.com/hziK8P
+# - title: Subscribe for Weekly Stories
+#   url: http://eepurl.com/hziK8P
   # /subscribe/
 # - title: Download Jekyll Theme
 #   url: https://github.com/zivong/jekyll-theme-hydure/archive/refs/heads/master.zip
