Added Feedback page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,6 +10,8 @@
   url: https://mohammadkhan-3.github.io/MoStories/tags/#screenplay
 - title: Memoirs
   url: https://mohammadkhan-3.github.io/MoStories/tags/#memoir
+- title: Feedback
+  url: /feedback/
 # - title: Subscribe for Weekly Stories
 #   url: http://eepurl.com/hziK8P
   # /subscribe/
