adding substack logo to socials

--- a/_data/social.yml
+++ b/_data/social.yml
@@ -10,6 +10,9 @@
 - title: Wordpress
   url: https://mostories261398878.wordpress.com/
   icon: fab fa-wordpress
+- title: SubStack
+  url: https://mostories.substack.com/p/coming-soon?showWelcome=true
+  icon: fab fa-SubStack
 - title: Portoflio
   url: https://mohammadkhan-3.github.io/resume/stories.html
   icon: fab fa-github.io
