--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@
   url: https://mohammadkhan-3.github.io/MoStories/tags/#memoir
 - title: Feedback
   url: /feedback/
-- title: Subscribe for Weekly Stories
+- title: Join our Newsletter!
   url: /subscribe/
 # - title: Download Jekyll Theme
 #   url: https://github.com/zivong/jekyll-theme-hydure/archive/refs/heads/master.zip
