--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,8 +10,8 @@
   url: https://mohammadkhan-3.github.io/MoStories/tags/#screenplay
 - title: Memoirs
   url: https://mohammadkhan-3.github.io/MoStories/tags/#memoir
-- title: Feedback
-  url: /feedback/
+# - title: Feedback
+#   url: /feedback/
 - title: Join our Newsletter!
   url: /subscribe/
 # - title: Download Jekyll Theme
