New Story & navigation
Added week 90
Added "The Observer" to the navigation panel
Updated navigation panel

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,6 +10,10 @@
   url: https://mohammadkhan-3.github.io/MoStories/tags/#screenplay
 - title: Memoirs
   url: https://mohammadkhan-3.github.io/MoStories/tags/#memoir
+- title: Poems
+  url: https://mohammadkhan-3.github.io/MoStories/tags/#poem
+- title: The Observer
+  url: https://mohammadkhan-3.github.io/MoStories/tags/#the-observer
 # - title: Feedback
 #   url: /feedback/
 - title: Join our Newsletter!
